<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/currentStateTextView"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="49dp"
        android:text="Insurance Period: 3\nPassengers In Car: 2\nPassengers Waiting For Pickup: 2"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/acceptNewRideReqButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="22dp"
        android:text="@string/accept_new_ride_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentStateTextView" />

    <Button
        android:id="@+id/pickupAPassengerButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="17dp"
        android:text="@string/pickup_a_passenger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acceptNewRideReqButton" />

    <Button
        android:id="@+id/cancelRequestButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="18dp"
        android:text="@string/cancel_a_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickupAPassengerButton" />

    <Button
        android:id="@+id/dropAPassengerButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="18dp"
        android:text="@string/drop_a_passenger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cancelRequestButton" />

    <Button
        android:id="@+id/offDutyButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="30dp"
        android:text="@string/off_duty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropAPassengerButton" />
</androidx.constraintlayout.widget.ConstraintLayout>